--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 Secret_Signed_Token=asdfasdfasdfaf
 
 role_user=1234123412
-role_moderator=589097677
+role_moderato=589097677
+
+USERDB=root
+PASSWORDDB=12345678
+HOSTDB=localhost
+PORTDB=3030
+DB=prueba
