--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-secret_signed_token=asdfasdfasdfaf
+SECRET_SIGNED_TOKEN=asdfasdfasdfaf
 
-role_user=1234123412
-role_moderator=589097677
+ROLE_USER=1234123412
+ROLE_MODERATOR=589097677
 
-USERDB=root
-PASSWORDDB=12345678
-HOSTDB=localhost
-PORTDB=3030
+USER_DB=root
+PASSWORD_DB=12345678
+HOST_DB=localhost
+PORT_DB=3030
 DB=prueba
